Change button text from 'Add Task' to 'Add To-do'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container" id="container">
-      <button id="addTask" class="addTask">Add Task</button>
+      <button id="addTask" class="addTask">Add To-do</button>
       
 
       <div class="info" id="info"></div>
@@ -19,4 +19,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
